# Advent-of-Code-2024

./: .gitignore  README.md  pyproject.toml
advent_of_code_2024/: base.py  cli.py
advent_of_code_2024/day_01/: __init__.py  solver.py
advent_of_code_2024/day_02/: __init__.py  solver.py
advent_of_code_2024/day_03/: __init__.py  solver.py
advent_of_code_2024/day_04/: __init__.py  solver.py
advent_of_code_2024/day_05/: __init__.py  solver.py
advent_of_code_2024/day_06/: __init__.py  solver.py
advent_of_code_2024/day_07/: __init__.py  solver.py
advent_of_code_2024/day_08/: __init__.py  solver.py
advent_of_code_2024/day_09/: __init__.py  solver.py
advent_of_code_2024/day_10/: __init__.py  solver.py
advent_of_code_2024/day_11/: __init__.py  solver.py
advent_of_code_2024/day_12/: __init__.py  solver.py
advent_of_code_2024/day_13/: __init__.py  solver.py
advent_of_code_2024/day_14/: __init__.py  solver.py
advent_of_code_2024/day_15/: __init__.py  solver.py
advent_of_code_2024/day_16/: __init__.py  solver.py
advent_of_code_2024/day_17/: __init__.py  solver.py
advent_of_code_2024/day_18/: __init__.py  solver.py
test/: base_test.py  test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py  test_day_05.py  test_day_06.py  test_day_07.py  test_day_08.py  test_day_09.py  test_day_10.py  test_day_11.py  test_day_12.py  test_day_13.py  test_day_14.py  test_day_15.py  test_day_16.py  test_day_17.py  test_day_18.py  test_day_19.py  test_day_20.py  test_day_21.py  test_day_22.py  test_day_23.py  test_day_24.py  test_day_25.py
(+14 files in other folders)
