[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Advent-of-Code-2024"
version = "1.0.0"
requires-python = ">=3.12"
description = "Advent of code 2024 solutions"
readme = "README.md"

[tool.hatch.metadata]
allow-direct-references = true

[tool.isort]
profile = "google"
force_single_line = false

[project.scripts]
aoc_2024_solver = "advent_of_code_2024.cli:main"
